[package]
name = "cardtrader_client"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
inquire = "0.7.5"
whoami = "1.1"
regex = "1.5"
dotenv = "0.15"
teloxide = { version = "0.12.2", features = ["macros"] }
scraper = "0.13.0"
select = "0.5.0"
urlencoding = "2.1.2"
indicatif = "0.17.8"
futures = "0.3"
lazy_static = "1.4.0"
headless_chrome = "1.0.10"
url = "2.5.2"
